delivery/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: jnlp
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: admins-config
              mountPath: /var/jenkins_home/casc_configs/admins
              readOnly: true
      volumes:
        - name: jenkins-home
          emptyDir: {}
        - name: admins-config
          configMap:
            name: jenkins-admins-config
